--- a/theme.css
+++ b/theme.css
@@ -818,6 +818,7 @@ hr {
 .anp-callout-toggle .callout:not(.is-collapsible) .callout-title {
   background-color: rgba(var(--callout-color), 0.0.5);
   padding: 10px;
+  cursor: pointer;
 }
 .anp-callout-toggle .callout:not(.is-collapsible) .callout-title .callout-title-inner {
   font-weight: normal;
@@ -836,13 +837,15 @@ hr {
 }
 .anp-callout-toggle .callout.is-collapsible.is-collapsed .callout-title {
   background-color: rgba(var(--callout-color), 0.1);
-  padding: 10px
+  padding: 10px;
+  cursor: pointer;
 }
 .anp-callout-toggle .callout.is-collapsible:not(.is-collapsed) .callout-title {
   background-color: rgba(var(--callout-color), 0.1);
   padding: 10px 0px 10px 10px;
   border-bottom: 1px dashed;
   border-color: rgba(var(--callout-color), 0.4);
+  cursor: pointer;
 }
 .anp-callout-toggle .callout.is-collapsible:not(.is-collapsed) .callout-content {
   padding: 10px 10px 0 15px;
@@ -865,17 +868,18 @@ hr {
   padding-right: 3px;
 }
 /*-Custom callout colors-*/
-.anp-callout-color-toggle .callout {
+.anp-callout-color-toggle .callout[data-callout="note"] {
   --callout-color: var(--ctp-blue);
   --callout-icon: lucide-pencil;
 }
-.anp-callout-color-toggle.anuppuccin-accent-toggle .callout {
+.anp-callout-color-toggle.anuppuccin-accent-toggle .callout[data-callout="note"] {
   --callout-color: var(--ctp-accent);
   --callout-icon: lucide-pencil;
 }
 .anp-callout-color-toggle .callout[data-callout="abstract"],
 .anp-callout-color-toggle .callout[data-callout="summary"],
-.anp-callout-color-toggle .callout[data-callout="tldr"] {
+.anp-callout-color-toggle .callout[data-callout="tldr"],
+.anp-callout-color-toggle .callout[data-callout="seealso"] {
   --callout-color: var(--ctp-blue);
 }
 .anp-callout-color-toggle .callout[data-callout="info"],
