--- a/theme.css
+++ b/theme.css
@@ -115,6 +115,10 @@ settings:
       level: 2
       collapsed: true
   - 
+      id: anp-alternate-tab-toggle
+      title: Alternate tabs toggle
+      type: class-toggle
+  - 
       id: anp-tooltip-toggle
       title: Disable tooltips
       type: class-toggle
@@ -1037,6 +1041,72 @@ hr {
   transition: color 0.4s;
   color: rgb(var(--rainbow-folder-color));
 }
+/*-------------------ALTERNATE TAB STYLING-------------------*/
+.anp-alternate-tab-toggle .workspace-ribbon.mod-left:before {
+  padding-bottom: 13px;
+}
+.anp-alternate-tab-toggle .workspace-ribbon.mod-left {
+  margin-top: calc(var(--header-height) + 13px);
+}
+.anp-alternate-tab-toggle .workspace-tabs.mod-top {
+  --header-height: 53px;
+  --tab-background: var(--background-secondary);
+  --tab-background-active: var(--background-primary);
+  --tab-font-size: 12px;
+  --tab-height: 28px;
+  --tab-max-width: 200px;
+  --tab-max-width-active: 300px
+}
+.anp-alternate-tab-toggle .workspace-tab-header::before,
+.anp-alternate-tab-toggle .workspace-tab-header::after,
+.anp-alternate-tab-toggle .workspace .mod-root .workspace-tab-header-inner::after {
+  display: none;
+}
+.anp-alternate-tab-toggle .workspace-tab-header-container-inner {
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  width: 100%;
+}
+.anp-alternate-tab-toggle .workspace-tab-header {
+  background: var(--tab-background);
+  border-radius: 6px;
+  box-shadow: none !important;
+  height: var(--tab-height);
+  margin-left: 12px;
+  padding: 0 !important;
+  transition: background-color 150ms ease-in-out;
+}
+.anp-alternate-tab-toggle .mod-root .workspace-tab-header {
+  max-width: var(--tab-max-width) !important;
+  transition: flex-grow 0.5s, max-width 0.5s;
+}
+.anp-alternate-tab-toggle .workspace-tab-header:first-child {
+  margin-left: 0;
+}
+.anp-alternate-tab-toggle .mod-root .workspace-tab-header-inner {
+  padding: 0 4px 0 8px;
+  color: var(--text-muted);
+}
+.anp-alternate-tab-toggle .mod-root .workspace-tab-header.is-active {
+  flex-grow: 1.67 !important;
+  max-width: var(--tab-max-width-active) !important;
+  background-color: var(--background-primary);
+}
+.anp-alternate-tab-toggle .mod-root .workspace-tab-header.is-active .workspace-tab-header-inner {
+  color: var(--text-normal);
+}
+.anp-alternate-tab-toggle .mod-root .workspace-tab-header.is-active:hover {
+  background-color: var(--background-modifier-border);
+}
+.anp-alternate-tab-toggle .sidebar-toggle-button.mod-left,
+.anp-alternate-tab-toggle .sidebar-toggle-button.mod-right {
+  align-items: center;
+}
+.anp-alternate-tab-toggle .sidebar-toggle-button.mod-left .clickable-icon,
+.anp-alternate-tab-toggle.sidebar-toggle-button.mod-right .clickable-icon {
+  height: var(--tab-height);
+}
 /*---------------------PLUGINS-------------------------------*/
 /*----------------STYLE SETTINGS------------*/
 .style-settings-heading[data-level="0"] { margin-bottom: 15px;}
@@ -1072,6 +1142,47 @@ hr {
 .style-settings-heading[data-id="anuppuccin-theme-credits-link"] {
   border-bottom: 1px solid rgb(var(--ctp-surface0)) !important;
 }
+/* Rainbow folder settings styling*/
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id="anp-rainbow-section-header"],
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id="anp-full-rainbow-folder-settings"],
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id="anp-simple-rainbow-folder-settings"] {
+  background: linear-gradient(to right, rgba(var(--ctp-red), 1), rgba(var(--ctp-peach), 1), rgba(var(--ctp-yellow), 1), rgba(var(--ctp-green), 1), rgba(var(--ctp-teal), 1), rgba(var(--ctp-blue), 1), rgba(var(--ctp-mauve), 1), rgba(var(--ctp-pink), 1)) !important;
+  padding-bottom: 3px;
+  padding-top: 0px;
+  height: 37px;
+  border-bottom-width: 0 !important;
+  margin-top: 3px;
+}
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id="anp-rainbow-section-header"] .setting-item-info,
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id="anp-full-rainbow-folder-settings"] .setting-item-info,
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id="anp-simple-rainbow-folder-settings"] .setting-item-info {
+  background-color: var(--background-primary);
+}
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id="anp-rainbow-section-header"] .setting-item-name,
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id="anp-full-rainbow-folder-settings"] .setting-item-name,
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id="anp-simple-rainbow-folder-settings"] .setting-item-name {
+  line-height: 37px;
+}
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id="anp-rainbow-section-header"] .setting-item-control,
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id="anp-full-rainbow-folder-settings"] .setting-item-control,
+.anp-plugin-style-settings-header-color .style-settings-container .setting-item-heading[data-id="anp-simple-rainbow-folder-settings"] .setting-item-control {
+  background-color: var(--background-primary);
+  height: 37px;
+}
+/* Highlight theme settings */
+.style-settings-heading[data-id="anuppuccin-theme-settings"] .setting-item-name,
+.style-settings-heading[data-id="anuppuccin-theme-settings-extended"] .setting-item-name {
+  color: var(--color-accent);
+}
+.style-settings-heading[data-id="anuppuccin-theme-settings"],
+.style-settings-heading[data-id="anuppuccin-theme-settings-extended"] {
+  border-color: hsla(var(--color-accent-hsl), 0.5);
+}
+.anuppuccin-accent-toggle .style-settings-heading[data-id="anuppuccin-theme-settings"],
+.anuppuccin-accent-toggle .style-settings-heading[data-id="anuppuccin-theme-settings-extended"] {
+  border-color: rgba(var(--ctp-accent), 0.5);
+}
+
 /*------------------DATAVIEW------------------*/
 /*-Fix dataview table header size-*/
 .table-view-table > thead > tr > th {
