--- a/theme.css
+++ b/theme.css
@@ -115,8 +115,12 @@ settings:
       level: 2
       collapsed: true
   - 
+      id: anp-button-metadata-toggle
+      title: Enable custom metadata button
+      type: class-toggle
+  - 
       id: anp-color-transition-toggle
-      title: Color transition toggle
+      title: Color transition toggle (WIP)
       description: "Adds a transition when switching palettes, looks really neat :)"
       type: class-toggle
   - 
@@ -723,6 +727,36 @@ body {
   margin: 0 auto;
 }
 /*---------------UI ELEMENTS---------------*/
+/*-Button for metadata-*/
+.anp-button-metadata-toggle .frontmatter-container .frontmatter-container-header {
+  width: 32px !important;
+  height: 32px !important;
+  text-overflow: clip;
+  overflow: hidden;
+  color: transparent !important;
+  position: absolute;
+  background-color: rgba(var(--ctp-accent), 0.8);
+  left: calc(100% - 20px);
+  border-radius: 6px;
+}
+.anp-button-metadata-toggle .frontmatter-container .frontmatter-container-header:after {
+  position: absolute;
+  width: 18px;
+  content: " ";
+  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath d='M448 80v48c0 44.2-100.3 80-224 80S0 172.2 0 128V80C0 35.8 100.3 0 224 0S448 35.8 448 80zM393.2 214.7c20.8-7.4 39.9-16.9 54.8-28.6V288c0 44.2-100.3 80-224 80S0 332.2 0 288V186.1c14.9 11.8 34 21.2 54.8 28.6C99.7 230.7 159.5 240 224 240s124.3-9.3 169.2-25.3zM0 346.1c14.9 11.8 34 21.2 54.8 28.6C99.7 390.7 159.5 400 224 400s124.3-9.3 169.2-25.3c20.8-7.4 39.9-16.9 54.8-28.6V432c0 44.2-100.3 80-224 80S0 476.2 0 432V346.1z'/%3E%3C/svg%3E");
+  -webkit-mask-repeat: no-repeat;
+  background-color: var(--background-primary);
+  color: var(--background-secondary);
+  height: 20px;
+  margin-left: 7px;
+  margin-top: 5px;
+}
+.anp-button-metadata-toggle .frontmatter-container .frontmatter-container-header:hover {
+  background-color: rgba(var(--ctp-accent), 0.7);
+}
+.anp-button-metadata-toggle .frontmatter-container .frontmatter-container-header:active {
+  background-color: rgba(var(--ctp-accent), 0.6);
+}
 /*-Notices-*/
 .notice {
   color: rgb(var(--ctp-text));
@@ -748,7 +782,7 @@ hr {
 }
 /*-Blockquote spacing-*/
 .markdown-rendered blockquote {
-  padding-left: 10px;
+  padding: 5px 5px 5px 10px;
 }
 /*-Smoother popover transition-*/
 .popover.hover-popover.is-loaded {
